--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -48,9 +48,10 @@ body{
 
 
 .header{
-  border-radius: 10px;
+  /* border-radius: 10px; */
   text-align: center;
-  margin-top: 25px;		
+  margin-top: 25px;
+  padding-bottom: 25px;
 }
 
 .header__logo{
@@ -69,7 +70,8 @@ body{
 
 .buscador{
 	margin: 20px 1px 5px 25px;
-	width: 50%;
+  width: 50%;
+  padding: 4px 10px;
 }
 
 h1{
@@ -83,7 +85,8 @@ h1{
 
 .article__parrafo{
 	color: white;
-	text-align: center;
+  text-align: center;
+  padding: 30px 0;
 }
 
 nav{
@@ -280,4 +283,50 @@ footer{
 
 .liColor{
 	color: red;
+}
+
+.banner {
+  width: 100%;
+  max-width: 980px;
+}
+
+.navbar .dropdown-menu {
+  background-color: #5a5a5a;
+  text-align: center;
+}
+
+/* and this styles the dropdwon trigger link, when open */
+.navbar .dropdown.show a { 
+  background-color: #5a5a5a;
+}
+
+.navbar .nav-item {
+  margin-right: 0;
+}
+
+.navbar .dropdown-item {
+  color: #fff;
+}
+
+.dropdown-item:hover, .dropdown-item:focus {
+  background-color: #7e7e7e
+}
+
+.youtube-video {
+  max-width: 560px;
+  width: 100%;
+  height: 315px;
+}
+
+@media only screen and (max-width: 960px) {
+  .homeflex {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .homeflex .contenedor {
+    width: 100%;
+    margin-bottom: 30px;
+    padding: 0 20px;
+  }
 }
