--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -2,13 +2,7 @@
 body{
 	width: 100%;
 	background: black;
-
-
-	/*background-image: linear-gradient(to top, black, #999999, grey, black);*/
-	
 }
-
-
 
 @-webkit-keyframes scale-up-center {
   0% {
@@ -37,7 +31,6 @@ body{
 	background-image: radial-gradient(ellipse farthest-corner at 150px 150px , #424242 0%, rgba(0, 0, 255, 0) 50%, black 15%);
 } 
 
-
 .header__ul{
 	-webkit-transition:-webkit-transform 0.2s ease-in-out 0.1s;
 }
@@ -46,9 +39,7 @@ body{
     -webkit-transform: scale(1.1);
 }
 
-
 .header{
-  /* border-radius: 10px; */
   text-align: center;
   margin-top: 25px;
   padding-bottom: 25px;
@@ -59,14 +50,11 @@ body{
   border-radius: 10px;
   right: 185px;
   bottom: 50px;
-  /*box-shadow: 5px 5px 10px;*/
  }
-
 
 .bordes{
 	border-radius: 10px;
 }
-
 
 .buscador{
 	margin: 20px 1px 5px 25px;
@@ -76,11 +64,6 @@ body{
 
 h1{
 	color: white ;
-}
-
-.article{
-	/*box-shadow: 15px 15px 15px;*/
-
 }
 
 .article__parrafo{
@@ -96,7 +79,6 @@ nav{
 nav li{
 	display: inline;
 	margin-right: 25px;
-
 }
 
 @media only screen and (max-width: 1000px) {
@@ -106,12 +88,9 @@ nav li{
   }
 }
 
-
 .titulos{
 	color: white;
 }
-
-
 
 h3{
 	color: white;
@@ -119,7 +98,6 @@ h3{
 	margin-bottom: 30px;
 	text-shadow: 5px 4px 3px black;
 }
-
 
 .grid-nuevas{
 	display: grid;
@@ -129,15 +107,12 @@ h3{
 	grid-row-gap: 20px;
 }
 
-
 .grid-div{
 	display: grid;
 	grid-template-columns: 200px 200px 200px 200px;
 	grid-template-rows: 450px 450px;
 	grid-column-gap: 40px;
-	grid-row-gap: 100px;
-
-	
+	grid-row-gap: 100px;	
 }
 
 .contenedor{
@@ -151,9 +126,7 @@ h3{
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-
 }
-
 
 figure img{
 	margin: 0px auto;
@@ -164,7 +137,6 @@ figure img{
 figure img:hover{
     -webkit-transform: scale(1.2);
 }
-
 
 .flexPadre{
 	display: flex;
@@ -181,7 +153,6 @@ figure img:hover{
 	margin-top: 150px;
 }
 
-
 th{
 	color: white;
 }
@@ -190,8 +161,7 @@ tr{
 	color: white;
 }
 
-aside{
-	
+aside{	
 	color: white;
 	width: 12%;	
 }
@@ -214,12 +184,10 @@ aside{
     padding: 0;
 }
 
-
 .submenu li {
     display: block;
     padding: 10px;
 }
-
 
 blockquote{
 	text-align: center;
@@ -232,7 +200,6 @@ blockquote{
 .forms_letras{
 	color: white;
 }
-
 
 p{
 	text-align: center;
@@ -248,13 +215,7 @@ footer{
 	margin-bottom: 50px;
 	border-radius: 15px;*/
 }
-
-
-
-
-
 								/*Style Guitarras*/
-
 
 .centrar{
 	margin: 0px auto;	
@@ -308,6 +269,10 @@ footer{
   color: #fff;
 }
 
+.navbar.bottom-space{
+	margin-bottom: 20px;
+}
+
 .dropdown-item:hover, .dropdown-item:focus {
   background-color: #7e7e7e
 }
@@ -319,7 +284,7 @@ footer{
 }
 
 @media only screen and (max-width: 960px) {
-  .homeflex {
+	.homeflex {
     flex-direction: column;
     width: 100%;
   }
@@ -329,4 +294,17 @@ footer{
     margin-bottom: 30px;
     padding: 0 20px;
   }
+
+	.grid-nuevas{
+		display: flex;
+		flex-direction: column;	
+		text-align: center;
+		width: 100%;
+  }
+	.flexsection{
+		display: flex;
+		flex-direction: column;
+		width: 100%;	
+	}
 }
+
